<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TV_Judul_IDXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/TV_Judul_IDXML"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Chronometer
        android:id="@+id/C_Chronometer1_IDXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@color/colorPrimary"
        android:countDown="true"
        android:gravity="center"
        android:text="@string/C_Chronometer1_IDXML"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/LL_LinearLayout_IDXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/C_Chronometer1_IDXML"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/B_StartChronometer_IDXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/B_StartChronometer_IDXML" />

        <Button
            android:id="@+id/B_StopChronometer_IDXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/B_StopChronometer_IDXML" />

    </LinearLayout>

    <Button
        android:id="@+id/B_RestartChronometer_IDXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL_LinearLayout_IDXML"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/B_RestartChronometer_IDXML" />

    <Button
        android:id="@+id/B_Keluar_IDXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/B_RestartChronometer_IDXML"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/B_Keluar_IDXML" />

</RelativeLayout>